[fix] esolve CodeQL security alerts (log injection, CSRF, permissions, code quality)